@@ -28,8 +28,11 @@ rwtest() {
       }
 
 rwtestAll() {
+      rwtest testGraces.bww
       rwtest testHello.bww
-#      rwtest testNotes.bww
+      rwtest testNotes.bww
+      rwtest testTempo120.bww
+      rwtest testTempo60.bww
       }
 
 usage() {
