@@ -1,0 +1,15 @@
+"Graces",(T,L,0,0,Times New Roman,16,700,0,0,18,0,0,0)
+
+"Testfile",(Y,C,0,0,Times New Roman,14,400,0,0,18,0,0,0)
+
+"Leon Vinken",(M,R,0,0,Times New Roman,14,400,0,0,18,0,0,0)
+
+"Part of bbw2mxml",(F,R,0,0,Times New Roman,10,400,0,0,18,0,0,0)
+
+TuneTempo,90
+
+
+& sharpf sharpc 2_4	
+gstd D_2	!	
+dbf F_2	
+!I
