@@ -6,6 +6,6 @@ TuneTempo,60
 
 
 & sharpf sharpc 4_4
-LG_4	LA_4	B_4	C_4	D_4	!
-E_4	F_4	HG_4	HA_4	!t
+LG_4	LA_4	B_4	C_4	!
+D_4	E_4	F_4	HG_4	!t
 !I
